...
              style={{
                marginRight: spacing[1],
                textTransform: 'uppercase',
                color: color.palette.white,
                fontFamily: 'Geometria-Bold',
              }}
              testID='craftsmanFirstName'
            >
              {currentUser?.firstName}
            </Text>
            <Text
              style={{
                textTransform: 'uppercase',
                color: color.palette.white,
                fontFamily: 'Geometria',
              }}
              testID='craftsmanLastName'
            >
              {currentUser?.lastName}
            </Text>
          </View>
        </View>
      </View>
...
