...
            <View style={{ flex: 1, alignItems: 'center', justifyContent: 'center', paddingHorizontal: 10 }}>
              <Text style={[TITLE_STYLE, titleStyle]} text={headerTextValue} />
            </View>
            {rightContent ? (
              rightContent
            ) : rightIcon ? (
              <Button preset='link' onPress={onRightPress} testID='header-right-button'>
                <Icon icon={rightIcon} style={{ tintColor: palette.white }} />
              </Button>
            ) : (
              <View style={{ width: 32 }} />
            )}
            {children}
...
