...
  const handleSubmit = form.handleSubmit(data => {
    fetch(data as any);
  });

  return (
    <BgLayout>
      <View style={styles.container} testID='welcomeScreen'>
        <AutoImage source={require('./images/welcome.logo.png')} resizeMode='contain' resizeMethod='auto' style={styles.logo} />
        <View style={styles.form}>
          <View style={styles.field}>
            <FormProvider {...form}>
              <BpInput textColor={palette.pine} name='email' labelTx='welcomeScreen.email' testID='emailInput' />
              <BpPasswordInput textColor={palette.pine} name='password' labelTx='welcomeScreen.password' testID='passwordInput' />
...
          </View>
          <View style={styles.forgotPassword}>
            <TouchableOpacity onPress={() => navigation.navigate('forgotPassword')}>
              <Text tx='welcomeScreen.forgotPassword' style={styles.forgotPasswordText} />
            </TouchableOpacity>
          </View>
          <Button style={styles.button} onPress={handleSubmit} isLoading={isLoading} testID='loginButton'>
            <Text tx='welcomeScreen.login' style={styles.textButton} />
          </Button>
          <UnderlineText navigation={navigation} screen={'registration'} description={'welcomeScreen.noAccount'} text={'welcomeScreen.itsThisWay'} />
        </View>
      </View>
    </BgLayout>
...
