...
    "changePassword": "Nouveau mot de passe",
    "oops": "Oups !",
    "sendDraft": "Un brouillon ne peut pas être envoyé",
    "openBrowser": "Impossible d'ouvrir votre navigateur",
    "unknown": "Inconnu"
  },
  "drawer": {
    "search": "Je recherche de l'aide, une valeur, etc"
  },
  "transactionListScreen": {
    "title": "Transactions",
    "balance": "Balance",
    "reference": "Référence",
    "titleLabel": "Titre",
    "total": "Total",
    "associate": "Associer une facture",
...
      "phone": "Téléphone",
      "email": "Email",
      "townCode": "Code de la commune de prospection",
      "tvaNumber": "Numéro de TVA"
    }
  },
  "homeScreen": {
    "title": "Accueil",
    "labels": {
      "collectPayment": "Collecter un paiement",
      "balance": "solde du compte d’encaissement",
      "activity": "Activité",
      "quotationAndInvoice": "Devis / Facture",
...
      "goals": "Objectif",
      "income": "Encaissement",
      "outcome": "Décaissement",
      "cashFlow": "Trésorerie",
      "boostMyResult": "Booster mes résultats",
      "lastTransactions": "Dernières Transactions",
      "monthMenu": "Vue mensuelle",
      "yearMenu": "Vue annuelle",
      "monthly": "(ce mois)",
      "annual": "(cette année)"
    }
  },
  "invoiceScreen": {
    "title": "Devis / Facturation",
    "summary": {
...
