...
              color: color.palette.secondaryColor,
              fontFamily: 'Geometria-Heavy',
              marginLeft: spacing[4],
            }}
          />
        </View>
        <TouchableOpacity testID={'transactionSummarySettingsButton'}>
          <Menu
            items={items}
            actions={{
              month: () => monthlyView(),
              year: () => annualView(),
            }}
...
                </Text>
              </View>
            );
          })}
        </View>
        <View style={{ width: '70%', height: '100%', justifyContent: 'flex-start', alignItems: 'center' }}>
          <View style={{ height: 120, width: 240 }} testID='transactionSummaryChart'>
            {
              <PieChart
                donut
                semiCircle
                radius={120}
                showText
...
