export interface StaticInformation {
  title: string;
  value: string;
}

export const StaticLeftInformationValues = [
  {
    title: 'MUTATION HUM',
    value: 'DÉGRADATION',
  },
  {
    title: 'TAUX DE RÉPARATION',
    value: '0%',
  },
  {
    title: "TAUX D'USURE / MOISISSURE",
    value: '47%',
  },
  {
    title: 'RISQUE FEU',
    value: 'NÉANT',
  },
  {
    title: 'OBSTACLE',
    value: '7%',
  },
  {
    title: 'HÉTÉROGÉNÉITÉ DES REVÊTEMENTS',
    value: '74%',
  },
];
export const StaticRightInformationValues = [
  {
    title: 'SURFACE TOTALE',
    value: '3 205m²',
  },
  {
    title: 'TYPE',
    value: 'PLAT',
  },
  {
    title: 'PENTE',
    value: '0°',
  },
  {
    title: "TAUX D'HUMIDITÉ",
    value: '26%',
  },
  {
    title: 'FISSURE CASSURE',
    value: 'NÉANT',
  },
  {
    title: 'REVÊTEMENT',
    value: 'ASPHALTE GRAY',
  },
];
