appId: com.bpartnersmobile
---
- assertVisible:
    id: 'header-right-button'
- tapOn:
    id: 'header-right-button'
    waitToSettleTimeoutMs: 100000
- scrollUntilVisible:
    element:
      id: 'logoutButton'
    direction: DOWN
    timeout: 100000
    speed: 40
- tapOn:
    id: 'logoutButton'
    waitToSettleTimeoutMs: 100000
- extendedWaitUntil:
    visible:
      id: 'welcomeScreen'
    timeout: 100000
- stopApp
