appId: com.bpartnersmobile
---
- runFlow:
    file: login.yml
- extendedWaitUntil:
    visible:
      id: 'homeScreen'
    timeout: 150000
- assertVisible:
    text: 'Pour démarrer, ajoutez une adresse et commencez à analyser les toitures de vos clients et prospects'
- assertVisible:
    text: 'ANALYSE DE TOITURE'
- assertVisible:
    text: 'SURFACE TOTALE'
- assertVisible:
    text: 'TYPE'
- assertVisible:
    text: "Analyser la toiture d'un prospect/client"
- tapOn:
    id: 'header-right-button'
    waitToSettleTimeoutMs: 100000
- assertVisible:
    id: 'drawer'
- assertVisible:
    id: 'drawerLogo'
- assertVisible:
    id: 'craftsmanFirstName'
- assertVisible:
    id: 'craftsmanLastName'
- back
- tapOn:
    text: "Analyser la toiture d'un prospect/client"
    waitToSettleTimeoutMs: 100000
- assertVisible:
    text: "Renseignez l'adresse de votre prospect ou votre client et analysez les images haute résolution de sa toiture."
- assertVisible:
    id: 'addressTextInput'
- assertVisible:
    id: 'nameTextInput'
- assertVisible:
    id: 'firstnameTextInput'
- assertVisible:
    id: 'emailTextInput'
- assertVisible:
    id: 'commentTextInput'
- back
- runFlow:
    file: logout.yml
