appId: com.bpartnersmobile
---
- launchApp
- extendedWaitUntil:
    visible:
      id: 'welcomeScreen'
    timeout: 150000
- assertVisible:
    id: 'emailTextInput'
- tapOn:
    id: 'emailTextInput'
    waitToSettleTimeoutMs: 100000
- eraseText: 50
- inputText: ${USER_EMAIL}
- assertVisible:
    id: 'passwordTextInput'
- tapOn:
    id: 'passwordTextInput'
    waitToSettleTimeoutMs: 100000
- eraseText: 50
- inputText: ${USER_PASSWORD}
- assertVisible:
    id: 'loginButton'
- assertVisible:
    text: ${USER_EMAIL}
- assertVisible:
    id: 'togglePasswordVisibility'
- hideKeyboard
- tapOn:
    id: 'togglePasswordVisibility'
- assertVisible:
    text: ${USER_PASSWORD}
- hideKeyboard
- tapOn:
    id: 'loginButton'
    waitToSettleTimeoutMs: 100000
- extendedWaitUntil:
    visible:
      id: 'homeScreen'
    timeout: 150000
